--- a/gpt_api.ipynb
+++ b/gpt_api.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -11,7 +11,7 @@
        "' \\nTo save code to GitHub:\\nCommand Prompt -> Make sure in correct folder - cd Coding Lessons\\ngit add gpt_api.ipynb\\ngit commit -m \"Whatever change made\"\\ngit push\\n'"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -41,60 +41,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "28202\n",
-      "29202\n",
-      "30202\n",
-      "31202\n",
-      "32202\n",
-      "33202\n"
-     ]
-    }
-   ],
-   "source": [
-    "def pureWebcam():\n",
-    "    vid = cv2.VideoCapture(0, cv2.CAP_DSHOW)\n",
-    "    frameNumber = 30\n",
-    "   \n",
-    "   \n",
-    "    papapy = 0\n",
-    "    cv2.imshow(\"Tester\", vid.read()[1])  \n",
-    "    def mouse_callback(event, x, y, flags, params):\n",
-    "        global papapy\n",
-    "        if(event == cv2.EVENT_LBUTTONDOWN):\n",
-    "            print(papapy)\n",
-    "            papapy += 1000\n",
-    "    cv2.setMouseCallback('Tester', mouse_callback)\n",
-    "\n",
-    "\n",
-    "    while True:\n",
-    "        # Get current frame from webcam - vid.read() returns 2 things, _, is used for the things we don't care about\n",
-    "        _, frame = vid.read()\n",
-    "        cv2.putText(frame, str(papapy), (100, 100), cv2.FONT_HERSHEY_SIMPLEX, 3, (255, 0, 0), 2)\n",
-    "        papapy += 1\n",
-    "        cv2.imshow(\"Tester\", frame)\n",
-    "\n",
-    "\n",
-    "        # Press q to quit\n",
-    "        if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "            break\n",
-    "\n",
-    "\n",
-    "    vid.release()\n",
-    "    cv2.destroyAllWindows()\n",
-    "pureWebcam()\n",
-    "       \n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
    "outputs": [],
@@ -114,36 +60,55 @@
     "    audio_file = open(\"recording.wav\", \"rb\")\n",
     "    transcript = openai.Audio.transcribe(\"whisper-1\", audio_file)\n",
     "\n",
-    "    return transcript\n"
+    "    return transcript"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'myMessage' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\brody\\Coding Lessons\\gpt_api.ipynb Cell 4\u001b[0m line \u001b[0;36m7\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=73'>74</a>\u001b[0m     vid\u001b[39m.\u001b[39mrelease()\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=74'>75</a>\u001b[0m     cv2\u001b[39m.\u001b[39mdestroyAllWindows()\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=76'>77</a>\u001b[0m openWebcamWindow()\n",
-      "\u001b[1;32mc:\\Users\\brody\\Coding Lessons\\gpt_api.ipynb Cell 4\u001b[0m line \u001b[0;36m6\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=59'>60</a>\u001b[0m     cv2\u001b[39m.\u001b[39mrectangle(frame, (\u001b[39m0\u001b[39m, \u001b[39m0\u001b[39m), (\u001b[39m100\u001b[39m, \u001b[39m100\u001b[39m), greenColor, thickness)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=60'>61</a>\u001b[0m     cv2\u001b[39m.\u001b[39mrectangle(frame, (\u001b[39m120\u001b[39m, \u001b[39m0\u001b[39m), (\u001b[39m220\u001b[39m, \u001b[39m100\u001b[39m), greenColor, thickness)\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=62'>63</a>\u001b[0m cv2\u001b[39m.\u001b[39mputText(frame, myMessage, (\u001b[39m250\u001b[39m, \u001b[39m75\u001b[39m), font, \u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m, redColor, \u001b[39m2\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=63'>64</a>\u001b[0m cv2\u001b[39m.\u001b[39mputText(frame, chatGPTMessage, (\u001b[39m250\u001b[39m, \u001b[39m125\u001b[39m), font, \u001b[39m1\u001b[39m\u001b[39m/\u001b[39m\u001b[39m2\u001b[39m, redColor, \u001b[39m2\u001b[39m)\n\u001b[0;32m     <a href='vscode-notebook-cell:/c%3A/Users/brody/Coding%20Lessons/gpt_api.ipynb#W4sZmlsZQ%3D%3D?line=66'>67</a>\u001b[0m \u001b[39m# Display current frame\u001b[39;00m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'myMessage' is not defined"
-     ]
-    },
-    {
-     "ename": "",
-     "evalue": "",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31mThe Kernel crashed while executing code in the the current cell or a previous cell. Please review the code in the cell(s) to identify a possible cause of the failure. Click <a href='https://aka.ms/vscodeJupyterKernelCrash'>here</a> for more info. View Jupyter <a href='command:jupyter.viewOutput'>log</a> for further details."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Recording\n",
+      "Not Recording\n",
+      "{\n",
+      "  \"text\": \"Write me an essay using 150 words.\"\n",
+      "}\n"
      ]
     }
    ],
    "source": [
+    "myMessage = []\n",
+    "chatGPTMessage = []\n",
+    "mainEmotion = \"\"\n",
+    "def mouse_callback(event, x, y, flags, params):\n",
+    "        global myMessage\n",
+    "        global chatGPTMessage\n",
+    "        global mainEmotion\n",
+    "        count1 = 0\n",
+    "        count2 = 0\n",
+    "        if(event == cv2.EVENT_LBUTTONDOWN and x <= 100 and y <= 100):\n",
+    "            global ra\n",
+    "            ra = recordAudio()\n",
+    "            recordingText = \"RECORDING\"\n",
+    "        if(event == cv2.EVENT_LBUTTONDOWN and (x >= 120 and x <= 220) and y <= 100):\n",
+    "            print(ra)\n",
+    "            rec = True\n",
+    "            recordingText = \"\"\n",
+    "            chat_completion = openai.ChatCompletion.create(model=\"gpt-3.5-turbo\", messages=[\n",
+    "                                {\"role\": \"system\", \"content\": \"The emotion of the person you are talking with is \" + mainEmotion + \"Don't add more than 150 words\"}, \n",
+    "                                {\"role\": \"user\", \"content\": ra[\"text\"]}])\n",
+    "            for x in range(0, len(ra[\"text\"]), 40):\n",
+    "                myMessage.append((ra[\"text\"])[x:x+40])\n",
+    "                count1 += 1\n",
+    "            for x in range(0, len(chat_completion[\"choices\"][0][\"message\"][\"content\"]), 40):\n",
+    "                chatGPTMessage.append((chat_completion[\"choices\"][0][\"message\"][\"content\"])[x:x+40]) \n",
+    "                count2 += 1\n",
+    "\n",
+    "\n",
     "def openWebcamWindow():\n",
     "\n",
     "    # Set up webcam capture\n",
@@ -161,22 +126,14 @@
     "    recordingText = \"\"\n",
     "    global myMessage\n",
     "    global chatGPTMessage\n",
+    "    global mainEmotion\n",
+    "    mainEmotion = \"\"\n",
+    "    myMessage = []\n",
+    "    chatGPTMessage = []\n",
+    "    count1 = 75\n",
+    "    count2 = 125\n",
     "    cv2.imshow(\"Facial Detection\", vid.read()[1])\n",
     "    \n",
-    "    def mouse_callback(event, x, y, flags, params):\n",
-    "        if(event == cv2.EVENT_LBUTTONDOWN and x <= 100 and y <= 100):\n",
-    "            global ra\n",
-    "            ra = recordAudio()\n",
-    "            recordingText = \"RECORDING\"\n",
-    "        if(event == cv2.EVENT_LBUTTONDOWN and (x >= 120 and x <= 220) and y <= 100):\n",
-    "            print(ra)\n",
-    "            rec = True\n",
-    "            recordingText = \"\"\n",
-    "            chat_completion = openai.ChatCompletion.create(model=\"gpt-3.5-turbo\", messages=[{\"role\": \"system\", \"content\": \"You are a helpful assistant.\"}, \n",
-    "                                                                                {\"role\": \"user\", \"content\": ra[\"text\"]}])\n",
-    "            myMessage = \"Your Message: \" + ra[\"text\"]\n",
-    "            chatGPTMessage = \"ChatGPT: \" + chat_completion[\"choices\"][0][\"message\"][\"content\"]\n",
-    "            \n",
     "            \n",
     "    # On mouse click, run a method             \\/ this one\n",
     "    cv2.setMouseCallback('Facial Detection', mouse_callback)\n",
@@ -185,7 +142,8 @@
     "        # Get current frame from webcam - vid.read() returns 2 things, _, is used for the things we don't care about\n",
     "        _, frame = vid.read()\n",
     "        x = 0\n",
-    "\n",
+    "        count1 = 75\n",
+    "        count2 = 125\n",
     "        analytics = DeepFace.analyze(frame, actions = ['emotion'], enforce_detection=False, silent=True)\n",
     "        \n",
     "        for x in range(len(analytics)):\n",
@@ -205,10 +163,13 @@
     "            cv2.putText(frame, mainEmotion, startingPoint, font, 1, redColor, thickness)\n",
     "            cv2.rectangle(frame, (0, 0), (100, 100), greenColor, thickness)\n",
     "            cv2.rectangle(frame, (120, 0), (220, 100), greenColor, thickness)\n",
-    "        \n",
-    "        cv2.putText(frame, myMessage, (250, 75), font, 1/2, redColor, 2)\n",
-    "        cv2.putText(frame, chatGPTMessage, (250, 125), font, 1/2, redColor, 2)\n",
-    "            \n",
+    "\n",
+    "        for x in range(len(myMessage)):\n",
+    "            cv2.putText(frame, myMessage[x], (250, count1), font, 1/2, redColor, 2)\n",
+    "            count1 += 13\n",
+    "        for x in range(len(chatGPTMessage)):\n",
+    "            cv2.putText(frame, chatGPTMessage[x], (250, count2), font, 1/2, redColor, 2)\n",
+    "            count2 += 13\n",
     "        \n",
     "        # Display current frame\n",
     "        cv2.imshow(\"Facial Detection\", frame)\n",
